[gd_scene load_steps=39 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://res/player_jump.tres" type="Texture" id=2]
[ext_resource path="res://res/player_idle.tres" type="Texture" id=3]
[ext_resource path="res://res/player_run.tres" type="Texture" id=4]
[ext_resource path="res://res/player_death.tres" type="Texture" id=5]
[ext_resource path="res://res/inverted_colors.tres" type="Material" id=6]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=7]
[ext_resource path="res://res/HUD_theme.tres" type="Theme" id=8]
[ext_resource path="res://assets/global_light.png" type="Texture" id=9]
[ext_resource path="res://assets/light.png" type="Texture" id=10]
[ext_resource path="res://assets/life_counter.png" type="Texture" id=11]
[ext_resource path="res://assets/life_counter_empty.png" type="Texture" id=12]
[ext_resource path="res://assets/hud_left.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 11, 28.5 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 12.5, 28.5 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 23, 28.5 )

[sub_resource type="Curve" id=29]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.10315, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=30]
curve = SubResource( 29 )

[sub_resource type="ParticlesMaterial" id=28]
resource_local_to_scene = true
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 196, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_curve = SubResource( 30 )

[sub_resource type="Shader" id=25]
code = "shader_type canvas_item;

uniform float intensity = 1.0;

void fragment() {
	vec3 screen_pixel = texture(SCREEN_TEXTURE, SCREEN_UV).rgb;
	float gray = dot(screen_pixel.rgb, vec3(0.299, 0.587, 0.114));
	screen_pixel.rgb = vec3(gray, gray, gray);
	COLOR.rgb = COLOR.rgb * (screen_pixel * intensity);
}
"

[sub_resource type="ShaderMaterial" id=26]
shader = SubResource( 25 )
shader_param/intensity = 1.0

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 0.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 9, 1 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 11.5, 29.5 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 13.5, 29.5 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 24, 29.5 )

[sub_resource type="Animation" id=27]
resource_name = "light_off"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 5.0, 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUD/BlackAndWhiteEffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasModulate:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:energy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.25 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HUD/BlackAndWhiteEffect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 24, 28 )

[node name="Player" type="KinematicBody2D"]
light_mask = 2
collision_layer = 3328
collision_mask = 3328
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="IdleCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2, 3.5 )
shape = SubResource( 21 )

[node name="JumpCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 3.5 )
shape = SubResource( 22 )

[node name="RunCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3.5 )
shape = SubResource( 23 )

[node name="Damage" type="Particles2D" parent="."]
emitting = false
amount = 32
one_shot = true
local_coords = false
process_material = SubResource( 28 )

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="BlackAndWhiteEffect" type="TextureRect" parent="HUD"]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 26 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="Frame" type="ColorRect" parent="HUD"]
margin_left = 1108.0
margin_top = 12.0
margin_right = 1268.0
margin_bottom = 172.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_left = 1112.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 168.0

[node name="Control" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 8 )

[node name="LeftCorner" type="TextureRect" parent="HUD/Control"]
modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
light_mask = 0
margin_right = 268.0
margin_bottom = 130.0
texture = ExtResource( 13 )

[node name="PauseMenu" type="VBoxContainer" parent="HUD/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="HUD/Control/PauseMenu"]
margin_right = 389.0
margin_bottom = 46.0
text = "PAUSADO"
align = 1

[node name="ResumeButton" type="Button" parent="HUD/Control/PauseMenu"]
margin_top = 54.0
margin_right = 389.0
margin_bottom = 106.0
text = "Continuar"

[node name="SettingsButton" type="Button" parent="HUD/Control/PauseMenu"]
margin_top = 114.0
margin_right = 389.0
margin_bottom = 166.0
text = "Configurações"

[node name="MenuButton" type="Button" parent="HUD/Control/PauseMenu"]
margin_top = 174.0
margin_right = 389.0
margin_bottom = 226.0
text = "Voltar ao menu principal"

[node name="CurrLevelLabel" type="Label" parent="HUD/Control"]
margin_left = 16.0
margin_top = 72.0
margin_right = 217.0
margin_bottom = 120.0
grow_vertical = 2
text = "Nivel"
valign = 1

[node name="LifeCounter1" type="TextureRect" parent="HUD/Control"]
margin_left = 16.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 48.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="LifeCounter0" type="TextureRect" parent="HUD/Control"]
margin_left = 112.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 80.0
rect_rotation = 180.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="LivesLabel" type="Label" parent="HUD/Control"]
margin_left = 16.0
margin_top = 8.0
margin_right = 217.0
margin_bottom = 56.0
grow_vertical = 2
text = "Vidas:"
align = 2
valign = 1

[node name="LivesCountLabel" type="Label" parent="HUD/Control"]
margin_left = 224.0
margin_top = 8.0
margin_right = 425.0
margin_bottom = 56.0
grow_vertical = 2
text = "0"
valign = 1

[node name="CurrColorLabel" type="Label" parent="HUD/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 472.0
margin_top = 168.0
margin_right = 624.0
margin_bottom = 214.0
grow_horizontal = 2
text = "COLOR"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = -41.0
margin_top = -79.0
margin_right = 39.0
margin_bottom = -39.0
align = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 0, 1 )
frames = SubResource( 10 )
animation = "idle"
playing = true

[node name="Stomp" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stomp"]
position = Vector2( -1, 32 )
shape = SubResource( 24 )

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 2048

[node name="IdleCollisionShape" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( -2, 3.5 )
shape = SubResource( 32 )

[node name="JumpCollisionShape" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 33 )

[node name="RunCollisionShape" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 0, 3.5 )
shape = SubResource( 34 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 10 )
texture_scale = 5.0
energy = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/light_off = SubResource( 27 )

[node name="DarkAreaScanner" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="DarkAreaScanner"]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 31 )

[node name="DamageCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="HUD/Control/PauseMenu/ResumeButton" to="HUD" method="_on_ResumeButton_button_down"]
[connection signal="button_down" from="HUD/Control/PauseMenu/MenuButton" to="HUD" method="_on_MenuButton_button_down"]
[connection signal="body_entered" from="Stomp" to="." method="_on_Stomp_body_entered"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_DeathZone_area_entered"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="area_entered" from="DarkAreaScanner" to="." method="_on_DarkAreaScanner_area_entered"]
[connection signal="area_exited" from="DarkAreaScanner" to="." method="_on_DarkAreaScanner_area_exited"]
[connection signal="timeout" from="DamageCooldownTimer" to="." method="_on_DamageCooldownTimer_timeout"]
